--- a/index.html
+++ b/index.html
@@ -10,10 +10,37 @@
   <body>
     <header>
       <h1>Discover hidden places in the world around you</h1>
-      <a href="https://1fa7fb1bda7e4c7ebbd0e45a0037e1eb.cc-propeller.cloud/#"
-        >Download Excursion (Coming Soon)</a
-      >
+      <div>
+        <a href="https://1fa7fb1bda7e4c7ebbd0e45a0037e1eb.cc-propeller.cloud/#"
+          >Download Excursion (Coming Soon)</a
+        >
+      </div>
     </header>
-    <section></section>
+    <section>
+      <video
+        src="./resources/videos/excursion.mp4"
+        autoplay="true"
+        loop
+        muted
+      ></video>
+    </section>
+    <section>
+      <h2>Your personal travel guide</h2>
+      <p>
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+      <img src="./resources/images/camp.jpg" alt="campsite on mountain" />
+    </section>
+    <footer>
+      <img src="./resources/images/phone.png" alt="phone icon" />
+      <h2>Coming soon for iPhone and Android</h2>
+      <div>
+        <a href="https://1fa7fb1bda7e4c7ebbd0e45a0037e1eb.cc-propeller.cloud/#"
+          >Download Excursion (Coming Soon)</a
+        >
+      </div>
+      <p><span>&copy;</span>Excursion</p>
+    </footer>
   </body>
 </html>
